3.2.8 (2017-03-XX)
------------------

New features
 - [core] new sogo-tool manage-acl command to manage calendar/address book ACLs

Enhancements
 - [web] constrain event/task reminder to a positive number
 - [web] display year in day and week views

Bug fixes
 - [core] handle broken CalDAV clients sending bogus SENT-BY (#3992)
 - [core] fixed handling of exdates and proper intersection for fbinfo (#4051)
 - [core] remove attendees that have the same identity as the organizer (#3905)
 - [web] fixed ACL editor in admin module for Safari (#4036)
 - [web] fixed function call when removing contact category (#4039)
 - [web] localized mailbox names everywhere (#4040, #4041)
 - [web] hide fab button when printing (#4038)
 - [web] SOGoCalendarWeekdays must now be defined before saving preferences
 - [web] fixed CAS session timeout handling during XHR requests (#1456)
 - [web] exposed default value of SOGoMailAutoSave (#4053)
 - [web] fixed handling of contact organizations (#4028)
 - [web] fixed handling of attachments in mail editor (#4058, #4063)
 - [web] fixed saving draft outside Mail module (#4071)
 - [web] fixed SCAYT automatic language selection in HTML editor
 - [web] fixed task sorting on multiple categories
 - [eas] fixed opacity in EAS freebusy (#4033)

3.2.7 (2017-02-14)
------------------

New features
 - [core] new sogo-tool checkup command to make sure user's data is sane

Enhancements
 - [web] added Hebrew (he) translation - thanks to Raz Aidlitz

Bug fixes
 - [core] generalized the bcc handling code 
 - [web] saving the preferences was not possible when Mail module is disabled
 - [web] ignore mouse events in scrollbars of Month view (#3990)
 - [web] fixed public URL with special characters (#3993)
 - [web] keep the fab button visible when the center list is hidden
 - [web] localized mail, phone, url and address types (#4030)
 - [eas] improved EAS parameters parsing (#4003)
 - [eas] properly handle canceled appointments

3.2.6a (2017-01-26)